# internal/provider/apple/oas_schemas_gen.go
@@ -561,6 +561,52 @@ func (s *JobSummary) SetHomeOffice(val bool) {
 	s.HomeOffice = val
 }
 
+// NewOptBool returns new OptBool with value set to v.
+func NewOptBool(v bool) OptBool {
+	return OptBool{
+		Value: v,
+		Set:   true,
+	}
+}
+
+// OptBool is optional bool.
+type OptBool struct {
+	Value bool
+	Set   bool
+}
+
+// IsSet returns true if OptBool was set.
+func (o OptBool) IsSet() bool { return o.Set }
+
+// Reset unsets value.
+func (o *OptBool) Reset() {
+	var v bool
+	o.Value = v
+	o.Set = false
+}
+
+// SetTo sets value to v.
+func (o *OptBool) SetTo(v bool) {
+	o.Set = true
+	o.Value = v
+}
+
+// Get returns value and boolean that denotes whether value was set.
+func (o OptBool) Get() (v bool, ok bool) {
+	if !o.Set {
+		return v, false
+	}
+	return o.Value, true
+}
+
+// Or returns value if set, or given parameter if does not.
+func (o OptBool) Or(d bool) bool {
+	if v, ok := o.Get(); ok {
+		return v
+	}
+	return d
+}
+
 // NewOptNilString returns new OptNilString with value set to v.
 func NewOptNilString(v string) OptNilString {
 	return OptNilString{
@@ -677,7 +723,12 @@ func (o OptString) Or(d string) string {
 
 // Ref: #/components/schemas/SearchFilters
 type SearchFilters struct {
-	Locations []string `json:"locations"`
+	Locations  []string           `json:"locations"`
+	HomeOffice OptBool            `json:"homeOffice"`
+	Keywords   []string           `json:"keywords"`
+	Languages  []string           `json:"languages"`
+	Products   []string           `json:"products"`
+	Teams      []SearchTeamFilter `json:"teams"`
 }
 
 // GetLocations returns the value of Locations.
@@ -685,9 +736,59 @@ func (s *SearchFilters) GetLocations() []string {
 	return s.Locations
 }
 
+// GetHomeOffice returns the value of HomeOffice.
+func (s *SearchFilters) GetHomeOffice() OptBool {
+	return s.HomeOffice
+}
+
+// GetKeywords returns the value of Keywords.
+func (s *SearchFilters) GetKeywords() []string {
+	return s.Keywords
+}
+
+// GetLanguages returns the value of Languages.
+func (s *SearchFilters) GetLanguages() []string {
+	return s.Languages
+}
+
+// GetProducts returns the value of Products.
+func (s *SearchFilters) GetProducts() []string {
+	return s.Products
+}
+
+// GetTeams returns the value of Teams.
+func (s *SearchFilters) GetTeams() []SearchTeamFilter {
+	return s.Teams
+}
+
 // SetLocations sets the value of Locations.
 func (s *SearchFilters) SetLocations(val []string) {
 	s.Locations = val
+}
+
+// SetHomeOffice sets the value of HomeOffice.
+func (s *SearchFilters) SetHomeOffice(val OptBool) {
+	s.HomeOffice = val
+}
+
+// SetKeywords sets the value of Keywords.
+func (s *SearchFilters) SetKeywords(val []string) {
+	s.Keywords = val
+}
+
+// SetLanguages sets the value of Languages.
+func (s *SearchFilters) SetLanguages(val []string) {
+	s.Languages = val
+}
+
+// SetProducts sets the value of Products.
+func (s *SearchFilters) SetProducts(val []string) {
+	s.Products = val
+}
+
+// SetTeams sets the value of Teams.
+func (s *SearchFilters) SetTeams(val []SearchTeamFilter) {
+	s.Teams = val
 }
 
 // Ref: #/components/schemas/SearchJobsRequest
@@ -797,8 +898,12 @@ func (s *SearchJobsRequestLocale) UnmarshalText(data []byte) error {
 type SearchJobsRequestSort string
 
 const (
-	SearchJobsRequestSortRelevance SearchJobsRequestSort = "relevance"
-	SearchJobsRequestSortNewest    SearchJobsRequestSort = "newest"
+	SearchJobsRequestSortRelevance    SearchJobsRequestSort = "relevance"
+	SearchJobsRequestSortNewest       SearchJobsRequestSort = "newest"
+	SearchJobsRequestSortTeamAsc      SearchJobsRequestSort = "teamAsc"
+	SearchJobsRequestSortTeamDesc     SearchJobsRequestSort = "teamDesc"
+	SearchJobsRequestSortLocationAsc  SearchJobsRequestSort = "locationAsc"
+	SearchJobsRequestSortLocationDesc SearchJobsRequestSort = "locationDesc"
 )
 
 // AllValues returns all SearchJobsRequestSort values.
@@ -806,6 +911,10 @@ func (SearchJobsRequestSort) AllValues() []SearchJobsRequestSort {
 	return []SearchJobsRequestSort{
 		SearchJobsRequestSortRelevance,
 		SearchJobsRequestSortNewest,
+		SearchJobsRequestSortTeamAsc,
+		SearchJobsRequestSortTeamDesc,
+		SearchJobsRequestSortLocationAsc,
+		SearchJobsRequestSortLocationDesc,
 	}
 }
 
@@ -815,6 +924,14 @@ func (s SearchJobsRequestSort) MarshalText() ([]byte, error) {
 	case SearchJobsRequestSortRelevance:
 		return []byte(s), nil
 	case SearchJobsRequestSortNewest:
+		return []byte(s), nil
+	case SearchJobsRequestSortTeamAsc:
+		return []byte(s), nil
+	case SearchJobsRequestSortTeamDesc:
+		return []byte(s), nil
+	case SearchJobsRequestSortLocationAsc:
+		return []byte(s), nil
+	case SearchJobsRequestSortLocationDesc:
 		return []byte(s), nil
 	default:
 		return nil, errors.Errorf("invalid value: %q", s)
@@ -829,6 +946,18 @@ func (s *SearchJobsRequestSort) UnmarshalText(data []byte) error {
 		return nil
 	case SearchJobsRequestSortNewest:
 		*s = SearchJobsRequestSortNewest
+		return nil
+	case SearchJobsRequestSortTeamAsc:
+		*s = SearchJobsRequestSortTeamAsc
+		return nil
+	case SearchJobsRequestSortTeamDesc:
+		*s = SearchJobsRequestSortTeamDesc
+		return nil
+	case SearchJobsRequestSortLocationAsc:
+		*s = SearchJobsRequestSortLocationAsc
+		return nil
+	case SearchJobsRequestSortLocationDesc:
+		*s = SearchJobsRequestSortLocationDesc
 		return nil
 	default:
 		return errors.Errorf("invalid value: %q", data)
@@ -902,6 +1031,32 @@ func (s *SearchResult) SetSearchResults(val []JobSummary) {
 // SetTotalRecords sets the value of TotalRecords.
 func (s *SearchResult) SetTotalRecords(val int) {
 	s.TotalRecords = val
+}
+
+// Ref: #/components/schemas/SearchTeamFilter
+type SearchTeamFilter struct {
+	Team    string `json:"team"`
+	SubTeam string `json:"subTeam"`
+}
+
+// GetTeam returns the value of Team.
+func (s *SearchTeamFilter) GetTeam() string {
+	return s.Team
+}
+
+// GetSubTeam returns the value of SubTeam.
+func (s *SearchTeamFilter) GetSubTeam() string {
+	return s.SubTeam
+}
+
+// SetTeam sets the value of Team.
+func (s *SearchTeamFilter) SetTeam(val string) {
+	s.Team = val
+}
+
+// SetSubTeam sets the value of SubTeam.
+func (s *SearchTeamFilter) SetSubTeam(val string) {
+	s.SubTeam = val
 }
 
 // Ref: #/components/schemas/Team
